--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -39,7 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'manager:categories' %}">Categories</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           {% if user.is_authenticated %}
