--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -21,6 +21,7 @@
         padding-top: 3.5rem;
       }
     </style>
+    <script src="https://use.fontawesome.com/452826394c.js"></script>
   </head>
 
   <body>
