Created views and navigation in categories and items

--- a/manager/templates/manager/index.html
+++ b/manager/templates/manager/index.html
@@ -13,52 +13,44 @@
   <!-- Example row of columns -->
   <div class="row">
     <div class="col-md-4">
-      <h2>Categories</h2>
-      <ul class="list-unstyled">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-        <li>Item 6</li>
-        <li>Item 7</li>
-        <li>Item 8</li>
-        <li>Item 9</li>
-        <li>Item 10</li>
-      </ul>
-      <p><a class="btn btn-secondary" href="{% url 'manager:categories' %}" role="button">View more &raquo;</a></p>
+      <h2>Categories</h2> {% for category in categories %}
+      <div style="margin-bottom: 5px;">
+        <a class="btn btn-secondary" href="{% url 'manager:items_category' view='all' category=category.ID %}">
+          <li class="{{ category.Icon }}"></li>
+          {{ category.Name }}
+        </a>
+      </div>
+      {% endfor %}
+
+      <p><a class="btn btn-primary" href="{% url 'manager:categories' %}" role="button">View more &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Latest added items</h2>
       <ul class="list-unstyled">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-        <li>Item 6</li>
-        <li>Item 7</li>
-        <li>Item 8</li>
-        <li>Item 9</li>
-        <li>Item 10</li>
+        {% for item in added %}
+        <li>
+          <a href="{% url 'manager:items_item' view='all' category=item.Category.ID item=item.ID %}">
+            {{ item.Title }}
+          </a>
+          <span class="badge badge-secondary">{{ item.Category.Name }}</span>
+        </li>
+        {% endfor %}
       </ul>
-      <p><a class="btn btn-secondary" href="{% url 'manager:items' view='added' %}" role="button">View more &raquo;</a></p>
+      <p><a class="btn btn-primary" href="{% url 'manager:items' view='added' %}" role="button">View more &raquo;</a></p>
     </div>
     <div class="col-md-4">
       <h2>Latest changed items</h2>
       <ul class="list-unstyled">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-        <li>Item 6</li>
-        <li>Item 7</li>
-        <li>Item 8</li>
-        <li>Item 9</li>
-        <li>Item 10</li>
+        {% for item in changed %}
+        <li>
+          <a href="{% url 'manager:items_item' view='all' category=item.Category.ID item=item.ID %}">
+            {{ item.Title }}
+          </a>
+          <span class="badge badge-secondary">{{ item.Category.Name }}</span>
+        </li>
+        {% endfor %}
       </ul>
-      <p><a class="btn btn-secondary" href="{% url 'manager:items' view='changed' %}" role="button">View more &raquo;</a></p>
+      <p><a class="btn btn-primary" href="{% url 'manager:items' view='changed' %}" role="button">View more &raquo;</a></p>
     </div>
   </div>
 
