--- a/manager/templates/manager/categories.html
+++ b/manager/templates/manager/categories.html
@@ -1,1 +1,29 @@
-{% extends "manager/base.html" %} {% block content %} {% endblock %}
+{% extends "manager/base.html" %} {% block content %}
+
+<div class="container">
+  <h1>Categories</h1>
+  <div class="row">
+    {% for category in categories %}
+    <div class="col-2">
+      <a href="{% url 'manager:items_category' view='all' category=category.ID %}" class="btn btn-secondary">
+        <div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
+          <div class="card-header">
+            <center>{{ category.Name }}</center>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">
+            <center><i class="{{ category.Icon }}"></i></center>
+          </h4>
+          </div>
+        </div>
+      </a>
+      {% if forloop.counter|divisibleby:6 %}
+    </div>
+    <div class="col-sm">
+      {% endif %}
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
+{% endblock %}
