--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -18,7 +18,7 @@
       /* Move down content because we have a fixed navbar that is 3.5rem tall */
 
       body {
-        padding-top: 3.5rem;
+        padding-top: 5.0rem;
       }
     </style>
     <script src="https://use.fontawesome.com/452826394c.js"></script>
@@ -40,14 +40,21 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'manager:categories' %}">Categories</a>
           </li>
+          {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+            <a class="btn btn-success my-2 my-sm-0" href="{% url 'manager:items_add' %}">New Item</a>
           </li>
+          {% endif %}
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          {% if user.is_authenticated %}
-          <a class="btn btn-outline-warning my-2 my-sm-0" href="{% url 'logout' %}">Logout</a> {% else %}
-          <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'login' %}">Login</a> {% endif %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              {% if user.is_authenticated %}
+              <a class="btn btn-outline-secondary my-2 my-sm-0" href="{% url 'admin:index' %}"><i class="fa fa-unlock-alt"></i></a>
+              <a class="btn btn-outline-warning my-2 my-sm-0" href="{% url 'logout' %}">Logout</a> {% else %}
+              <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'login' %}">Login</a> {% endif %}
+            </li>
+          </ul>
         </form>
       </div>
     </nav>
