--- a/manager/templates/manager/items_add.html
+++ b/manager/templates/manager/items_add.html
@@ -1,1 +1,24 @@
-{% extends "manager/base.html" %} {% block content %} {% endblock %}
+{% extends "manager/base.html" %} {% block content %}
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+
+    </div>
+    <div class="col-5">
+      <h1>Add a new item</h1>
+      <form action="" method="post">
+        {% csrf_token %}
+        <table class="table">
+          {{ form }}
+        </table>
+        <input class="btn btn-primary" type="submit" value="Add" />
+      </form>
+    </div>
+    <div class="col">
+
+    </div>
+  </div>
+
+</div>
+{% endblock %}
