Added GitHub authentication

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -104,8 +104,8 @@
         <input type="hidden" name="next" value="{{ next }}" />
 
         <div class="form-group">
-          <p>
-            <a href="{% url 'social:begin' 'facebook' %}"><img src="{% static 'img/loginfacebook.png'%}" width="80%" /></a>
+          <p><strong>Or... try to use:</strong>
+            <a href="{% url 'social:begin' 'github' %}"><img src="{% static 'img/github.png'%}" /></a><br>
           </p>
         </div>
 
