--- a/manager/templates/manager/base.html
+++ b/manager/templates/manager/base.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'manager:categories' %}">Categories</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'manager:api' %}">API</a>
+          </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="btn btn-success my-2 my-sm-0" href="{% url 'manager:items_add' %}">New Item</a>
